--- a/index.ipynb
+++ b/index.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Some of the code in this lab was copied from the solution at https://github.com/learn-co-students/dsc-intervals-with-t-distribution-lab-online-ds-pt-061019"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Confidence Intervals with T Distribution - Lab"
    ]
   },
